syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

import "google/protobuf/empty.proto";

service PersonService {
	rpc CreatePerson(stream CreatePersonRequest) returns (stream PresonReply);
	rpc UpdatePerson(UpdatePersonRequest) returns (google.protobuf.Empty);
	rpc DeletePerson(stream PersonByIdRequest) returns (google.protobuf.Empty);
	rpc GetPersonById(PersonByIdRequest)  returns (PresonReply);
	rpc GetAll(google.protobuf.Empty) returns (stream PresonReply);
}

message CreatePersonRequest{
	string FirstName = 1;
	string LastName = 2 ;
}

message PresonReply{
	int32 Id =1;
	string FirstName = 2;
	string LastName = 3 ;
}

message UpdatePersonRequest{
	int32 Id =1;
	string FirstName = 2;
	string LastName = 3 ;
}

message PersonByIdRequest{
	int32 Id =1;
}